--- a/SASS/_basic.scss
+++ b/SASS/_basic.scss
@@ -26,6 +26,7 @@ body {
     margin: 0;
     background-color: $color3;
     color: $color2;
+    min-height: 100vh;
 }
 
 input, textarea, button {
