--- a/SASS/quiz.scss
+++ b/SASS/quiz.scss
@@ -18,7 +18,7 @@ body {
                 #quiz-content {
                     display: block!important;
 
-                    img#quiz-thumbnail {
+                    #quiz-thumbnail-area {
                         width: 100%!important;
                     }
 
@@ -91,9 +91,8 @@ body {
                     display: flex;
                     flex-wrap: wrap;
 
-                    #quiz-thumbnail {
+                    #quiz-thumbnail-area {
                         width: 50%;
-                        max-height: 100%;
                     }
 
                     #button-area {
